--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -29,14 +29,24 @@ twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
 
+
 # Assetic Configuration
+parameters:
+    assetic.filter.compass.images_dir: %kernel.root_dir%/web/images
+    assetic.filter.compass.http_path:  /images
+
 assetic:
     debug:          "%kernel.debug%"
     use_controller: false
-    bundles:        [ ]
+    bundles:        [PlanItUserBundle]
+    ruby: usr/bin/ruby
     #java: /usr/bin/java
     filters:
         cssrewrite: ~
+        sass:
+            bin: /usr/local/bin/sass
+        compass:
+            bin: /usr/local/bin/compass
         #closure:
         #    jar: "%kernel.root_dir%/Resources/java/compiler.jar"
         #yui_css:
