--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -39,14 +39,14 @@ assetic:
     debug:          "%kernel.debug%"
     use_controller: false
     bundles:        [PlanItUserBundle]
-    ruby: usr/bin/ruby
+    ruby: %libpath.ruby%
     #java: /usr/bin/java
     filters:
         cssrewrite: ~
         sass:
-            bin: /usr/local/bin/sass
+            bin: %libpath.sass%
         compass:
-            bin: /usr/local/bin/compass
+            bin: %libpath.compass%
         #closure:
         #    jar: "%kernel.root_dir%/Resources/java/compiler.jar"
         #yui_css:
