aaaaaa ça marche pas les polices

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -37,7 +37,7 @@ parameters:
 
 assetic:
     debug:          "%kernel.debug%"
-    use_controller: false
+    use_controller: true
     bundles:        [PlanItUserBundle]
     ruby: %libpath.ruby%
     #java: /usr/bin/java
