--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -29,15 +29,10 @@ twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
 
-
 # Assetic Configuration
-parameters:
-    assetic.filter.compass.images_dir: %kernel.root_dir%/web/images
-    assetic.filter.compass.http_path:  /images
-
 assetic:
     debug:          "%kernel.debug%"
-    use_controller: false
+    use_controller: true
     bundles:        [PlanItUserBundle]
     ruby: %libpath.ruby%
     #java: /usr/bin/java
@@ -47,10 +42,6 @@ assetic:
             bin: %libpath.sass%
         compass:
             bin: %libpath.compass%
-        #closure:
-        #    jar: "%kernel.root_dir%/Resources/java/compiler.jar"
-        #yui_css:
-        #    jar: "%kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar"
 
 # Doctrine Configuration
 doctrine:
