--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -32,7 +32,7 @@ twig:
 
 assetic:
     debug:          "%kernel.debug%"
-    use_controller: true
+    use_controller: false
     bundles:        [PlanItUserBundle]
     ruby: %libpath.ruby%
     #java: /usr/bin/java
