--- a/src/PlanIt/UserBundle/Resources/config/routing.yml
+++ b/src/PlanIt/UserBundle/Resources/config/routing.yml
@@ -1,3 +1,6 @@
 PlanItUserBundle_homepage:
-    path:     /
+    path:     /home/{id}
     defaults: { _controller: PlanItUserBundle:Page:index }
+    requirements:
+        _method:  GET
+        id: \d+
