ajout de bootstrap + fonts

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -40,6 +40,7 @@ assetic:
         cssrewrite: ~
         sass:
             bin: %libpath.sass%
+            apply_to: "\.scss$"
         compass:
             bin: %libpath.compass%
 
