--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,4 +1,13 @@
+plan_it_rest:
+    resource: "@PlanItRestBundle/Resources/config/routing.yml"
+    prefix:   /
+
 plan_it_user:
     resource: "@PlanItUserBundle/Resources/config/routing.yml"
     prefix:   /
 
+#REST 
+rest : 
+  type : rest 
+  resource : "routing_rest.yml"
+  prefix : /api
