--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,14 @@
         "symfony/assetic-bundle": "~2.3",
         "symfony/swiftmailer-bundle": "~2.3",
         "symfony/monolog-bundle": "~2.4",
+        "symfony/twig-bridge": "3.0.*@dev",
         "sensio/distribution-bundle": "~3.0",
         "sensio/framework-extra-bundle": "~3.0",
         "incenteev/composer-parameter-handler": "~2.0",
-        "kriswallsmith/assetic": "1.2.*@dev"
+        "kriswallsmith/assetic": "1.2.*@dev",
+        "friendsofsymfony/rest-bundle": "dev-master",
+        "jms/serializer-bundle": "dev-master",
+        "jms/twig-js-bundle": "dev-master"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
