--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,11 @@
     },
     "require": {
         "php": ">=5.3.3",
-        "jquery/jquery":"1.9.*",
         "symfony/symfony": "2.5.*",
         "doctrine/orm": "~2.2,>=2.2.3",
         "doctrine/doctrine-bundle": "~1.2",
         "twig/extensions": "~1.0",
         "symfony/assetic-bundle": "~2.3",
-        "symfony/swiftmailer-bundle": "~2.3",
         "symfony/monolog-bundle": "~2.4",
         "symfony/twig-bridge": "3.0.*@dev",
         "sensio/distribution-bundle": "~3.0",
@@ -55,6 +53,7 @@
     "extra": {
         "symfony-app-dir": "app",
         "symfony-web-dir": "web",
+        "symfony-assets-install": "symlink",
         "incenteev-parameters": {
             "file": "app/config/parameters.yml"
         },
