--- a/src/PlanIt/UserBundle/Resources/config/routing.yml
+++ b/src/PlanIt/UserBundle/Resources/config/routing.yml
@@ -4,3 +4,10 @@ PlanItUserBundle_homepage:
     requirements:
         _method:  GET
         id: \d+
+
+PlanItUserBundle_eventpage:
+    path:     /event/{id}
+    defaults: { _controller: PlanItUserBundle:Page:event }
+    requirements:
+        _method:  GET
+        id: \d+
