Passage de la page event du Bundle User au Bundle Event

--- a/src/PlanIt/EventBundle/Resources/config/routing.yml
+++ b/src/PlanIt/EventBundle/Resources/config/routing.yml
@@ -1,3 +1,6 @@
-plan_it_event_homepage:
-    path:     /hello/{name}
-    defaults: { _controller: PlanItEventBundle:Default:index }
+PlanItEventBundle_event:
+    path:     /event/{id}
+    defaults: { _controller: PlanItEventBundle:Page:event }
+    requirements:
+        _method:  GET
+        id: \d+
