--- a/src/PlanIt/RestBundle/Resources/config/routing_rest.yml
+++ b/src/PlanIt/RestBundle/Resources/config/routing_rest.yml
@@ -5,5 +5,5 @@ users :
 
 events : 
   type: rest
-  resource:     "PlanItRestBundle:UserRest"
+  resource:     "PlanItRestBundle:EventRest"
   name_prefix:  api_
