--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+plan_it_guests:
+    resource: "@PlanItGuestsBundle/Resources/config/routing.yml"
+    prefix:   /
+
 plan_it_event:
     resource: "@PlanItEventBundle/Resources/config/routing.yml"
     prefix:   /
