--- a/src/PlanIt/TodoBundle/Resources/config/routing.yml
+++ b/src/PlanIt/TodoBundle/Resources/config/routing.yml
@@ -1,3 +1,6 @@
-plan_it_todo_homepage:
-    path:     /hello/{name}
-    defaults: { _controller: PlanItTodoBundle:Default:index }
+PlanItTodoBundle_todo:
+    path:     /todo/{id}
+    defaults: { _controller: PlanItTodoBundle:Page:index }
+    requirements:
+        _method:  GET
+        id: \d+
