Revert "page todo"
This reverts commit cdb91973fcb6bca6a723c448eb32cd61d1a3830f.

--- a/src/PlanIt/TodoBundle/Resources/config/routing.yml
+++ b/src/PlanIt/TodoBundle/Resources/config/routing.yml
@@ -1,6 +1,3 @@
-PlanItTodoBundle_todo:
-    path:     /todo/{id}
-    defaults: { _controller: PlanItTodoBundle:Page:index }
-    requirements:
-        _method:  GET
-        id: \d+
+plan_it_todo_homepage:
+    path:     /hello/{name}
+    defaults: { _controller: PlanItTodoBundle:Default:index }
