debut des moyens de paiement + MAJ BDD

--- a/src/PlanIt/RestBundle/Resources/config/routing_rest.yml
+++ b/src/PlanIt/RestBundle/Resources/config/routing_rest.yml
@@ -23,6 +23,11 @@ typeguest :
   resource:     "PlanItRestBundle:TypeGuestRest"
   name_prefix:  api_
 
+paymentmean : 
+  type: rest
+  resource:     "PlanItRestBundle:PaymentMeansRest"
+  name_prefix:  api_
+
 guests_module : 
   type: rest
   resource:     "PlanItRestBundle:GuestsModuleRest"
