--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -77,12 +77,12 @@ doctrine:
         auto_mapping: true
 
 # Swiftmailer Configuration
-#swiftmailer:
-    #transport: "%mailer_transport%"
-    #host:      "%mailer_host%"
-    #username:  "%mailer_user%"
-    #password:  "%mailer_password%"
-    #spool:     { type: memory }
+swiftmailer:
+    transport: "%mailer_transport%"
+    host:      "%mailer_host%"
+    username:  "%mailer_user%"
+    password:  "%mailer_password%"
+    spool:     { type: memory }
 
 
 fos_rest:
