--- a/src/PlanIt/UserBundle/Resources/config/services.yml
+++ b/src/PlanIt/UserBundle/Resources/config/services.yml
@@ -1,17 +1,5 @@
-# services:
-#    plan_it_user.example:
-#        class: PlanIt\UserBundle\Example
-#        arguments: [@service_id, "plain_value", %parameter%]
 services:
-    twig.extension.text:
-       class: Twig_Extensions_Extension_Text
-       tags:
-            - { name: twig.extension }
-    twig.extension.intl:
-        class: Twig_Extensions_Extension_Intl
-        tags:
-            - { name: twig.extension }
-    user.twig.extension:
+    planit.twig.user_extension:
         class: PlanIt\UserBundle\Twig\Extensions\UserExtension
         tags:
             - { name: twig.extension }
