Bug delete guest fix

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -108,6 +108,17 @@ fos_rest:
         default_format: json
 
 
+knp_snappy:
+    pdf:
+        enabled:    true
+        binary:     /usr/local/bin/wkhtmltopdf
+        options:    []
+    image:
+        enabled:    true
+        binary:     /usr/local/bin/wkhtmltoimage
+        options:    []
+
+
 
 
 
