--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "jms/serializer-bundle": "dev-master",
         "jms/twig-js-bundle": "dev-master",
         "doctrine/migrations": "1.0.*@dev",
-        "doctrine/doctrine-migrations-bundle": "2.1.*@dev"
+        "doctrine/doctrine-migrations-bundle": "2.1.*@dev",
+        "knplabs/knp-snappy-bundle": "dev-master"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
