--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -58,3 +58,6 @@ rest :
   type : rest 
   resource : "routing_rest.yml"
   prefix : /api
+
+fos_user:
+    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
