--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "incenteev/composer-parameter-handler": "~2.0",
         "kriswallsmith/assetic": "1.2.*@dev",
         "friendsofsymfony/rest-bundle": "dev-master",
+        "friendsofsymfony/user-bundle": "~2.0@dev",
         "jms/serializer-bundle": "dev-master",
         "jms/twig-js-bundle": "dev-master",
         "doctrine/migrations": "1.0.*@dev",
