Enlever select quand accepté + trucs pour login

--- a/src/PlanIt/UserBundle/Resources/config/routing.yml
+++ b/src/PlanIt/UserBundle/Resources/config/routing.yml
@@ -9,16 +9,13 @@ PlanItUserBundle_login:
     defaults: { _controller: PlanItUserBundle:Page:login }
     requirements:
         _method:  GET
-        id: \d+
 PlanItUserBundle_register:
     path:     /register
     defaults: { _controller: PlanItUserBundle:Page:register }
     requirements:
-        _method:  GET
-        id: \d+
+        _method:  GET|POST
 PlanItUserBundle_logout:
     path:     /logout
     defaults: { _controller: PlanItUserBundle:Page:logout }
     requirements:
         _method:  GET
-        id: \d+
